--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ textarea{
 
 .description{
   white-space: pre-wrap;
+  padding-top: 32px;
 }
 
 .time-block{
@@ -39,7 +40,11 @@ textarea{
 .hour {
   background-color: #ffffff;
   color: #000000;
+  display: flex;
   border-top: 1px dashed #000000;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .past {
